--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 40px;
+    padding: 10px 30px;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 1000;
+    background-color: #000000;
 }
 
 /* Botón de menú (hamburguesa) para móvil */
@@ -702,4 +703,9 @@ h1 {
     .card-desc {
         font-size: 0.85rem;
     }
+}
+
+
+body {
+    overflow-x: clip; 
 }
